Downloads/Eazyaces/infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kaamsetu
  labels:
    app.kubernetes.io/part-of: kaamsetu
